non_executable_reasons_record_from_random_10k/8027.txt
3.6
An error occurred while executing the following cell:
------------------
print 'RMSE for my estimate function: %s' % evaluate(my_estimate_function)
------------------

[0;36m  File [0;32m"<ipython-input-42-dbe2483ea1c5>"[0;36m, line [0;32m1[0m
[0;31m    print 'RMSE for my estimate function: %s' % evaluate(my_estimate_function)[0m
[0m                                            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-42-dbe2483ea1c5>, line 1)

Executability                            : False
